--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,12 @@
             <artifactId>scalaj-http_2.12</artifactId>
             <version>2.4.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.scala-js/scalajs-library -->
+        <dependency>
+            <groupId>org.scala-js</groupId>
+            <artifactId>scalajs-library_2.12</artifactId>
+            <version>1.0.0-M4</version>
+        </dependency>
+
     </dependencies>
 </project>
